@@ -1,6 +1,6 @@
 Package: car
 Version: 2.1-5
-Date: 2017-05=29
+Date: 2017-06-13
 Title: Companion to Applied Regression
 Authors@R: c(person("John", "Fox", role = c("aut", "cre"), email = "jfox@mcmaster.ca"),
 	person("Sanford", "Weisberg", role = "aut", email = "sandy@umn.edu"),
